# brainbox

./: pyproject.toml
BIMBIMBAMBAM/: Comandos SQL  DatabaseManager.py  Exam_stadistics_controller.py  QuizManager.py  admin.py  axolotl.py  examSolver.py  exam_builder.py  exam_taking.py  gui.py  main.py  mist_y.py  root.py  statistics.py  user_management.py
BIMBIMBAMBAM/txts/: Comandos SQL  TODO  sql connector
