[tool.poetry]
name = "brainboxproyect"
version = "0.1.0"
description = "quiz managament based app"
authors = ["Juan Astaiza & Samuel Arbelaez"]
license = "Alpha 1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
